--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.0.0",
+    "flow-bin": "^0.49.1",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0-alpha.12",
     "redux-devtools": "^3.4.0"
