--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-react": "^7.2.0",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-redux": "^5.0.5",
@@ -15,6 +19,8 @@
   "devDependencies": {
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "flow-bin": "^0.49.1",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0-alpha.12",
