--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-react": "^7.2.0",
+    "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-redux": "^5.0.5",
