--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
   "plugins": ["react"],
   "rules": {
     "react/jsx-filename-extension" : "off",
-    "jsx-a11y/href-no-hash" : "off"
+    "jsx-a11y/href-no-hash" : "off",
+    "no-class-assign" : "off"
   }
 }
